# image-process

./: .gitignore  Cargo.toml  README.md  build-mp.sh  build.sh  index.html  profiling-size.sh
.cargo/: config.toml
miniprogram/: vite.config.ts
miniprogram/src/image-process/: lib.d.ts  lib.js  lib_bg.wasm  lib_bg.wasm.br  lib_bg.wasm.d.ts
miniprogram/src/pages/index/: index.vue
rules/image-process-mp/js/: add_import.yml
src/: lib.rs  thumbnail.rs  utils.rs
web/: package.json
web/src/: main.ts
web/src/components/: OverlayCard.vue  ThumbnailCard.vue
