[package]
name = "image-process"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
image = { version="0.25.9", default-features = false, features = ["jpeg"] }
mp4 = "0.14.0"
wasm-bindgen = "0.2.106"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
# 显式添加 --enable-bulk-memory 参数
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-reference-types"]
